<resources>
    <string name="app_name">TravelRecord_20214009</string>
    <string name="nav_travel">여행기록</string>
    <string name="nav_favorite">즐겨찾기</string>
    <string name="nav_map">지도</string>
    <string name="travel_list_title">여행 기록</string>
    <string name="travel_list_subtitle">나만의 여행 이야기를 기록해보세요</string>
    <string name="favorite_list_title">즐겨찾기</string>
    <string name="favorite_list_subtitle">마음에 드는 여행을 모아보세요</string>
    <string name="map_title">지도</string>
    <string name="map_subtitle">여행지를 한눈에 확인하세요</string>
    <string name="travel_list_empty">등록된 여행 기록이 없습니다.</string>
    <string name="thumbnail_desc">여행 대표 사진</string>
    <string name="travel_item_clicked">%1$s</string>
    <string name="add_travel_title">여행 기록 추가</string>
    <string name="edit_travel_title">여행 기록 수정</string>
    <string name="label_title">여행지명</string>
    <string name="label_date">여행 날짜</string>
    <string name="label_memo">메모</string>
    <string name="hint_title">예: 제주도</string>
    <string name="hint_date">날짜를 선택하세요</string>
    <string name="hint_memo">여행 메모를 입력하세요</string>
    <string name="btn_save">저장</string>
    <string name="msg_saved">여행 기록이 저장되었습니다.</string>
    <string name="msg_updated">여행 기록이 수정되었습니다.</string>
    <string name="error_title_required">여행지명을 입력해주세요.</string>
    <string name="error_date_required">여행 날짜를 선택해주세요.</string>
    <string name="error_record_not_found">기록을 찾을 수 없습니다.</string>
    <string name="detail_travel_title">여행 상세</string>
    <string name="btn_edit">수정</string>
    <string name="memo_empty">메모 없음</string>
    <string name="btn_camera">카메라</string>
    <string name="btn_gallery">갤러리</string>
    <string name="error_camera_failed">사진 촬영에 실패했습니다.</string>
    <string name="error_gallery_failed">갤러리에서 사진을 불러오지 못했습니다.</string>
    <string name="error_permission_denied">권한이 필요합니다.</string>
    <string name="menu_sort_date">날짜순 정렬</string>
    <string name="menu_sort_title">이름순 정렬</string>
    <string name="menu_delete_all">전체 삭제</string>
    <string name="menu_app_info">앱 정보</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_cancel">취소</string>
    <string name="dialog_delete_title">기록 삭제</string>
    <string name="dialog_delete_message">\'%1$s\' 기록을 삭제하시겠습니까?</string>
    <string name="dialog_delete_all_title">전체 삭제</string>
    <string name="dialog_delete_all_message">모든 여행 기록을 삭제하시겠습니까?</string>
    <string name="app_info_message">TravelRecord_20214009\n여행 계획 및 기록 앱\n20214009</string>
    <string name="favorite_list_empty">즐겨찾기한 여행 기록이 없습니다.</string>
    <string name="btn_favorite_add">즐겨찾기 추가</string>
    <string name="btn_favorite_remove">즐겨찾기 해제</string>
    <string name="msg_favorite_added">즐겨찾기에 추가되었습니다.</string>
    <string name="msg_favorite_removed">즐겨찾기에서 해제되었습니다.</string>
    <string name="map_empty">GPS 정보가 있는 여행 기록이 없습니다.</string>
    <string name="error_save_failed">저장에 실패했습니다. 다시 시도해주세요.</string>
    <string name="error_load_failed">데이터를 불러오지 못했습니다.</string>
    <string name="error_map_unavailable">지도를 불러올 수 없습니다.</string>
</resources>